--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 	font-family: Branch;
 	src: url(font/Branch.otf);
 }
+@import url('https://fonts.googleapis.com/css2?family=Syne&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -34,7 +35,8 @@
 body {
     background-color: #f6f5f1;
     color: #222222;
-    font-family: Neue Machina Light;
+    font-family: Neue Machina Light, 'Syne', sans-serif;
+
 }
 
 .hero {
