--- a/css/styles.css
+++ b/css/styles.css
@@ -1,432 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Italiana&display=swap');
-
-@font-face {
-    font-family: myfont;
-    src: url(../font/Branch-Regular.woff) format('woff'),
-     url(../font/Branch-Regular.woff2) format('woff2'),
-     url(../font/Branch.otf) format('otf');
-     font-weight: normal;
-     font-style: normal;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-*,
-*::after,
-*::before {
-	box-sizing: border-box;
-}
-:root {
-    font-size: 14px;
-    /* COLOR SCHEME FROM ABELE INTERIORS
-    --primary-color: #f6f5f1;
-    --accent-color: #222222;
-    --gold-color: #d1b889; */
-    /* COLOR SCHEME FROM MUTEZA SKIN CARE
-    --primary-color: #fef5f0;
-    --accent-color: #1b262c;
-    --gold-color: #ffa372; */
-    /* COLOR SCHEME FROM VC SWIPE */
-    --primary-color: #f4f4f4;
-    --accent-color: #2d2c34;
-    --gold-color: #ff6b01;
-}
-::-webkit-scrollbar {
-    width: 12px;
-    display: none;
-}
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-}
-
-[data-scroll] {
-	will-change: transform;
-}
-
-body {
-    background-color: var(--primary-color);
-    font-family: Neue Machina Light;
-    user-select: none;
-}
-
-header, 
-footer, 
-.heading, 
-.hearing {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-nav ul li, 
-.third-para, 
-.fourth-para, 
-.services h3, 
-.services-image {
-    display: inline-block;
-}
-
-footer, 
-section, 
-header, 
-.heading, 
-.work, 
-.hearing {
-    width: 100%;
-}
-
-header,
-section {
-    height: 100vh;
-}
-
-.heading, 
-.hearing {
-    height: 80px;
-}
-
-h1, h2, h3, h4 {
-    font-family: myfont, serif;
-    font-weight: lighter;
-}
-
-h1, 
-h4 span, 
-.work-img img, 
-.mail-info-email::after,
-.mail-info-email::before, 
-.copyright, 
-#hearing1, 
-#hearing2, 
-#hearing3, 
-#work-heading1 {
-    position: absolute;
-}
-
-h4, 
-nav ul li, 
-.heading, 
-.third-para, 
-.fourth-para,
-.mail-info-email,
-.hearing,
-.work-heading {
-    position: relative;
-}
-
-h4,
-.heading, 
-.hearing,
-.work-heading {
-    overflow: hidden;
-}
-
-h1, 
-h4 span, 
-.line1, 
-.line2, 
-.line3,
-#hearing1, 
-#hearing2, 
-#hearing3, 
-#work-heading1 {
-    transition: transform 1.2s cubic-bezier(0.16, 1, 0.3, 1);
-}
-
-h1, 
-#hearing1, 
-#hearing2, 
-#hearing3, 
-#work-heading1 {
-    transform: skewY(4deg);
-}
-
-footer,
-.line1, 
-.line2, 
-.line3, 
-.services-image{
-    background-color: var(--accent-color);
-}
-
-body, 
-nav ul li, 
-.mail-info a, 
-.mail-info-email, 
-.mail-info-email:hover {
-    color: var(--accent-color);
-}
-
-.intro,
-.services p,
-h4 span::after,
-.fourth-para {
-    color: var(--gold-color);
-}
-
-a,
-nav ul li,
-.mail-info-email:focus,
-.mail-info-email:hover {
-    text-decoration: none;
-}
-
-.intro,
-.services,
-.mail-info,
-.mail-info-email::after,
-.mail-info-email::before {
-    text-align: center;
-}
-
-h4 span,
-nav ul li,
-footer p,
-.mail-info-email  {
-    cursor: pointer;
-}
-
-h1 {
-    /* font-family: 'Gilda Display', serif; */
-    color: var(--accent-color);
-    font-size: 90px;
-    margin: -25px 0;
-    top: 120px;
-}
-
-h2 {
-    font-size: 72px;
-    line-height: 80px;
-}
-
-h3 {
-    font-size: 24px;
-    font-style: oblique;
-    margin-bottom: 70px;
-    width: 210px;
-   
-}
-
-section {
-    padding: 0 100px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-nav ul{
-    list-style-type: none;
-}
-nav ul li {
-    margin: 0 10px;
-}
-
-.intro {
-    margin-top: 50px;
-}
-/* *************************************************** */
-
-.ham {
-    height: 20px;
-    width: 50px;
-}
-.ham:hover .line2 {
-    transform: rotate(-45deg);
-}
-.ham:hover .line1, .ham:hover .line3 {
-    transform: rotate(45deg);
-}
-
-.line1, .line2, .line3 {
-    margin: 3px 0;
-}
-.line1 {
-    height: 1.6px;
-    width: 12px;
-}
-.line2 {
-    height: 1.2px;
-    width: 20px;
-}
-.line3 {
-    height: 1.6px;
-    margin-left: 8px;
-    width: 12px;
-}
-
-/* ************************************************************* */
-
-.second-para {
-    border-top: 1px solid var(--accent-color);
-    margin-top: 80px;
-    padding-top: 20px;
-    width: 340px;
-}
-
-.third-para {
-    border-bottom: 1px solid var(--accent-color);
-    left: 50%;
-    padding-bottom: 20px;
-    top: 20vh;
-    width: 340px;
-}
-
-.fourth-para {
-    border-bottom: 1px solid var(--gold-color);
-    left: 50%;
-    padding-bottom: 20px;   
-    transform: translate(-50%);
-    top: 20vh;
-    width: 520px;
-}
-
-/* *********************************************** */
-.services{
-    height: auto;
-    margin-bottom: 30vh;
-}
-.services h3 {
-    font-style: normal;
-    font-size: 48px;
-    margin-bottom: 10px;
-    width: auto;
-}
-.services p {
-    margin-bottom: 30px;
-}
-.services-item {
-    margin: 10px 0;
-}
-.services-image {
-    height: 60px;
-    margin: 0 40px;
-    width: 96.6px;
-    object-fit: cover;
-}
-/* *********************************************** */
-
-h4 {
-    font-size: 36px;
-    height: 40px;
-    margin-bottom: 24px;
-}
-h4 span::after {
-    content: attr(getContent);
-    display: block;
-}
-h4 span:hover {
-    transform: translate3d(0, -52px, 0);
-}
-.work {
-    border-bottom: 1px solid var(--accent-color);
-    height: auto;
-    margin-top: 25px;
-}
-.work-heading {    
-    height: 70px;
-}
-.work-section {
-    margin-bottom: 40vh;
-}
-.work-img img{
-    left: 20%;
-    margin-top: -30%;
-    width: 300px;
-}
-#work-heading1 {
-    top: 80px;
-}
-#work-img1, 
-#work-img2, 
-#work-img3, 
-#work-img4, 
-#work-img5, 
-#work-img6, 
-#work-img7, 
-#work-img8 {
-    visibility: hidden;
-}
-
-/* *********************************************** */
-.arrow {
-    height: 90px;
-    margin: 40px 0;
-}
-.mail-info span {
-    font-style: oblique;
-}
-.mail-info-email {
-    height: 60px;
-    line-height: 70px;
-    margin-bottom: 10px;
-}
-
-.mail-info-email::after,
-.mail-info-email::before {
-    background-color: var(--gold-color);
-    bottom: 0;
-    content: "";
-    height: 2px;
-    left: 0;
-    margin-left: 25%;
-    right: 0;
-    width: 50%;
-}
-.mail-info-email::before {
-    transform: scaleX(0);
-    transform-origin: left;
-}
-.mail-info-email::after {
-    transform: scaleX(1);
-    transform-origin: right;
-}
-.mail-info-email:hover::before {
-    transform: scaleX(1);
-    transition: transform 1.5s 0.25s cubic-bezier(0.16, 1, 0.3, 1);
-}
-.mail-info-email:hover::after {
-    transform: scaleX(0);
-    transition: transform 1.5s cubic-bezier(0.16, 1, 0.3, 1);
-}
-
-#hearing1, #hearing2, #hearing3 {
-    top: 92px;
-}
-/* *********************************************** */
-footer {
-    height: 110vh;
-}
-footer, 
-footer a {
-    color: var(--primary-color);
-}
-footer p {
-    margin: 2px 0;
-    width: 200px;
-}
-footer p:not(:last-child):hover {
-    text-decoration: line-through;
-}
-footer a, 
-footer p:not(:last-child):hover {
-    text-decoration-color: var(--gold-color);
-}
-.copyright {
-    bottom: 50px;
-    font-size: 9px;
-    opacity: 0.6;
-}
-.last-section {
-    height: 80vh;
-    margin-top: 60vh;
-}
-/* *********************************************** */
-
+@import url(https://fonts.googleapis.com/css2?family=Gilda+Display&family=Italiana&display=swap);@font-face{font-family:myfont;src:url(../font/Branch-Regular.woff) format('woff'),url(../font/Branch-Regular.woff2) format('woff2'),url(../font/Branch.otf) format('otf');font-weight:400;font-style:normal}*{margin:0;padding:0}*,::after,::before{box-sizing:border-box}:root{font-size:14px;--primary-color:#f4f4f4;--accent-color:#2d2c34;--gold-color:#ff6b01}::-webkit-scrollbar{width:12px;display:none}::-webkit-scrollbar-track{border-radius:10px}::-webkit-scrollbar-thumb{border-radius:10px}[data-scroll]{will-change:transform}body{background-color:var(--primary-color);font-family:Neue Machina Light;user-select:none}.heading,.hearing,footer,header{display:flex;flex-direction:column;align-items:center;justify-content:center}.fourth-para,.services h3,.services-image,.third-para,nav ul li{display:inline-block}.heading,.hearing,.work,footer,header,section{width:100%}header,section{height:100vh}.heading,.hearing{height:80px}h1,h2,h3,h4{font-family:myfont,serif;font-weight:lighter}#hearing1,#hearing2,#hearing3,#work-heading1,.copyright,.mail-info-email::after,.mail-info-email::before,.work-img img,h1,h4 span{position:absolute}.fourth-para,.heading,.hearing,.mail-info-email,.third-para,.work-heading,h4,nav ul li{position:relative}.heading,.hearing,.work-heading,h4{overflow:hidden}#hearing1,#hearing2,#hearing3,#work-heading1,.line1,.line2,.line3,h1,h4 span{transition:transform 1.2s cubic-bezier(.16,1,.3,1)}#hearing1,#hearing2,#hearing3,#work-heading1,h1{transform:skewY(4deg)}.line1,.line2,.line3,.services-image,footer{background-color:var(--accent-color)}.mail-info a,.mail-info-email,.mail-info-email:hover,body,nav ul li{color:var(--accent-color)}.fourth-para,.intro,.services p,h4 span::after{color:var(--gold-color)}.mail-info-email:focus,.mail-info-email:hover,a,nav ul li{text-decoration:none}.intro,.mail-info,.mail-info-email::after,.mail-info-email::before,.services{text-align:center}.mail-info-email,footer p,h4 span,nav ul li{cursor:pointer}h1{color:var(--accent-color);font-size:90px;margin:-25px 0;top:120px}h2{font-size:72px;line-height:80px}h3{font-size:24px;font-style:oblique;margin-bottom:70px;width:210px}section{padding:0 100px}.fourth-para,.third-para{left:50%;padding-bottom:20px;top:20vh}nav{display:flex;justify-content:space-between;margin-top:30px}nav ul{list-style-type:none}nav ul li{margin:0 10px}.intro{margin-top:50px}.ham{height:20px;width:50px}.ham:hover .line2{transform:rotate(-45deg)}.ham:hover .line1,.ham:hover .line3{transform:rotate(45deg)}.line1,.line2,.line3{margin:3px 0}.line1{height:1.6px;width:12px}.line2{height:1.2px;width:20px}.line3{height:1.6px;margin-left:8px;width:12px}.second-para{border-top:1px solid var(--accent-color);margin-top:80px;padding-top:20px;width:340px}.third-para{border-bottom:1px solid var(--accent-color);width:340px}.fourth-para{border-bottom:1px solid var(--gold-color);transform:translate(-50%);width:520px}.services{height:auto;margin-bottom:30vh}.services h3{font-style:normal;font-size:48px;margin-bottom:10px;width:auto}.services p{margin-bottom:30px}.services-item{margin:10px 0}.services-image{height:60px;margin:0 40px;width:96.6px;object-fit:cover}h4{font-size:36px;height:40px;margin-bottom:24px}h4 span::after{content:attr(getContent);display:block}h4 span:hover{transform:translate3d(0,-52px,0)}.work{border-bottom:1px solid var(--accent-color);height:auto;margin-top:25px}.work-heading{height:70px}.work-section{margin-bottom:40vh}.work-img img{left:20%;margin-top:-30%;width:300px}#work-heading1{top:80px}#work-img1,#work-img2,#work-img3,#work-img4,#work-img5,#work-img6,#work-img7,#work-img8{visibility:hidden}.arrow{height:90px;margin:40px 0}.mail-info span{font-style:oblique}.mail-info-email{height:60px;line-height:70px;margin-bottom:10px}.mail-info-email::after,.mail-info-email::before{background-color:var(--gold-color);bottom:0;content:"";height:2px;left:0;margin-left:25%;right:0;width:50%}.mail-info-email::before{transform:scaleX(0);transform-origin:left}.mail-info-email::after{transform:scaleX(1);transform-origin:right}.mail-info-email:hover::before{transform:scaleX(1);transition:transform 1.5s .25s cubic-bezier(.16,1,.3,1)}.mail-info-email:hover::after{transform:scaleX(0);transition:transform 1.5s cubic-bezier(.16,1,.3,1)}#hearing1,#hearing2,#hearing3{top:92px}footer{height:110vh}footer,footer a{color:var(--primary-color)}footer p{margin:2px 0;width:200px}footer p:not(:last-child):hover{text-decoration:line-through}footer a,footer p:not(:last-child):hover{text-decoration-color:var(--gold-color)}.copyright{bottom:50px;font-size:9px;opacity:.6}.last-section{height:80vh;margin-top:60vh}
